# project_3

./: .gitignore  20시_30분_이후_변경점_md  COLLABORATION.md  README.md  pyproject.toml
1st_agent/docs/: ce_state_contract.md  claim_evidence_agent_plan.md  graphrag_plan.md  handoff_to_vc_agent.md  implementation_status_comparison.md
1st_agent/first_agent/: __init__.py
1st_agent/first_agent/agents/: __init__.py  claim_evidence_agent.py
1st_agent/first_agent/graphrag/: __init__.py  graph_builder.py  provenance.py  retriever.py
1st_agent/first_agent/guardrails/: __init__.py  claim_evidence_guardrails.py
1st_agent/first_agent/nodes/: __init__.py  chart_extraction_node.py  claim_chart_compare_node.py  claim_extraction_node.py  draft_judgement_node.py  strong_expression_node.py
1st_agent/first_agent/parsers/: __init__.py  chart_text_parser.py  html_article_parser.py
1st_agent/first_agent/prompts/: chart_extraction_prompt.md  claim_chart_compare_prompt.md  claim_evidence_prompt.md  claim_extraction_prompt.md  draft_judgement_prompt.md  strong_expression_prompt.md
1st_agent/first_agent/schemas/: __init__.py  claim_evidence_output.py
1st_agent/first_agent/state/: __init__.py  claim_evidence_state.py
1st_agent/guardrails/: test_claim_evidence_guardrails.py
1st_agent/test_samples/html/: article_with_chart.html  article_with_strong_claim.html  article_with_table.html  article_with_two_charts.html
1st_agent/test_samples/payloads/: sample_caution.json  sample_distorted.json  sample_limited.json  sample_supported.json
1st_agent/tests/: test_chart_extraction_node.py  test_claim_chart_compare_node.py  test_claim_evidence_agent.py  test_claim_extraction_node.py  test_draft_judgement_node.py  test_graphrag_retriever.py  test_strong_expression_node.py
3rd_agent/docs/: frontend_url_html_handoff.md  pre_handoff_check_report.md  prompt_architecture_plan.md
3rd_agent/guardrails/: test_verdict_critic_guardrails.py
3rd_agent/test_samples/html/: adaptive_competing_containers.html  article_with_table.html  article_without_metadata.html  expected_extractions.json  generic_paragraph_article.html  json_ld_article.html  malformed_noscript_iframe_article.html  mixed_paragraph_break_article.html  nate_article_structure.html  nate_br_article_structure.html
3rd_agent/tests/: test_frontend_manual_input.py  test_html_ingestion.py  test_streamlit_ui.py  test_technology_architecture.py
3rd_agent/third_agent/: __init__.py
3rd_agent/third_agent/agents/: __init__.py  verdict_critic_agent.py
3rd_agent/third_agent/nodes/: report_merge_node.py
agents/: verdict_critic_agent.py
common/state/: news_chart_check_state.py
docs/: prompt_architecture_plan.md
first_agent/: __init__.py
first_agent/ce_agent/: __init__.py
first_agent/docs/: ce_state_contract.md  claim_evidence_agent_plan.md  graphrag_plan.md  handoff_to_vc_agent.md
first_agent/guardrails/: test_claim_evidence_guardrails.py
first_agent/tests/: test_chart_extraction_node.py  test_claim_chart_compare_node.py  test_claim_evidence_agent.py  test_claim_extraction_node.py  test_draft_judgement_node.py  test_strong_expression_node.py
frontend/: __init__.py  html_ingestion.py  ingestion_outcome.py  streamlit_app.py  technology_architecture.py
nodes/: __init__.py
parsers/: frontend_payload_parser.py
prompts/: verdict_critic_prompt.md
second_agent/: README.md  __init__.py
second_agent/ig_agent/: __init__.py
state/: news_chart_check_state.py
supervisor/: README.md
supervisor/docs/: supervisor_architecture.md  supervisor_state_contract.md
supervisor/guardrails/: test_supervisor_guardrails.py
supervisor/multi_agent_supervisor/: __init__.py
supervisor/tests/: test_supervisor_agent.py  test_supervisor_routing.py
test_samples/: dry_run_verdict_critic_agent.py
third_agent/: __init__.py
third_agent/docs/: frontend_url_html_handoff.md  pre_handoff_check_report.md  prompt_architecture_plan.md
third_agent/guardrails/: test_verdict_critic_guardrails.py
third_agent/tests/: test_frontend_fallback.py  test_frontend_manual_input.py  test_html_ingestion.py  test_ingestion_outcome.py  test_streamlit_ui.py  test_technology_architecture.py
(+43 files in other folders)
