[project]
name = "third-llm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "frontend",
    "first_agent",
    "first_agent.agents",
    "first_agent.graphrag",
    "first_agent.guardrails",
    "first_agent.nodes",
    "first_agent.parsers",
    "first_agent.schemas",
    "first_agent.state",
    "third_agent",
    "third_agent.agents",
    "third_agent.nodes",
    "third_agent.parsers",
    "third_agent.state",
    "multi_agent_supervisor",
    "multi_agent_supervisor.agents",
    "multi_agent_supervisor.guardrails",
    "multi_agent_supervisor.nodes",
    "multi_agent_supervisor.schemas",
    "multi_agent_supervisor.state",
]

[tool.setuptools.package-dir]
frontend = "frontend"
first_agent = "1st_agent/first_agent"
third_agent = "3rd_agent/third_agent"
multi_agent_supervisor = "supervisor/multi_agent_supervisor"

[tool.setuptools.package-data]
first_agent = ["prompts/*.md"]
third_agent = ["prompts/*.md"]
multi_agent_supervisor = ["prompts/*.md"]
