[project]
name = "third-llm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "frontend",
    "ce_agent",
    "ce_agent.agents",
    "ce_agent.graphrag",
    "ce_agent.guardrails",
    "ce_agent.nodes",
    "ce_agent.parsers",
    "ce_agent.schemas",
    "ce_agent.state",
    "vc_agent",
    "vc_agent.agents",
    "vc_agent.nodes",
    "vc_agent.parsers",
    "ig_agent",
    "multi_agent_supervisor",
    "multi_agent_supervisor.agents",
    "multi_agent_supervisor.guardrails",
    "multi_agent_supervisor.nodes",
    "multi_agent_supervisor.schemas",
    "multi_agent_supervisor.state",
]

[tool.setuptools.package-dir]
frontend = "frontend"
ce_agent = "first_agent/ce_agent"
vc_agent = "third_agent/vc_agent"
ig_agent = "second_agent/ig_agent"
multi_agent_supervisor = "supervisor/multi_agent_supervisor"

[tool.setuptools.package-data]
ce_agent = ["prompts/*.md"]
vc_agent = ["prompts/*.md"]
multi_agent_supervisor = ["prompts/*.md"]
