[project]
name = "third-llm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "frontend",
    "common",
    "common.state",
    "first_agent",
    "first_agent.ce_agent",
    "first_agent.ce_agent.agents",
    "first_agent.ce_agent.graphrag",
    "first_agent.ce_agent.guardrails",
    "first_agent.ce_agent.nodes",
    "first_agent.ce_agent.parsers",
    "first_agent.ce_agent.prompts",
    "first_agent.ce_agent.schemas",
    "first_agent.ce_agent.state",
    "second_agent",
    "second_agent.ig_agent",
    "third_agent",
    "third_agent.vc_agent",
    "third_agent.vc_agent.agents",
    "third_agent.vc_agent.nodes",
    "third_agent.vc_agent.parsers",
    "third_agent.vc_agent.prompts",
    "multi_agent_supervisor",
    "multi_agent_supervisor.agents",
    "multi_agent_supervisor.guardrails",
    "multi_agent_supervisor.nodes",
    "multi_agent_supervisor.schemas",
    "multi_agent_supervisor.state",
]

[tool.setuptools.package-dir]
frontend = "frontend"
common = "common"
first_agent = "first_agent"
second_agent = "second_agent"
third_agent = "third_agent"
multi_agent_supervisor = "supervisor/multi_agent_supervisor"

[tool.setuptools.package-data]
"first_agent.ce_agent" = ["prompts/*.md"]
"third_agent.vc_agent" = ["prompts/*.md"]
multi_agent_supervisor = ["prompts/*.md"]
